# smarthomatic

./: .gitignore  CMakeLists.txt
firmware/shc_envsensor/: CMakeLists.txt
firmware/shc_hr20/: Makefile  rfm12_config.h  shc_hr20.c
firmware/src_common/: msggrp_thermostat.h  packet_header.h
tools/shc_e2p_editor/: packet_layout.xml
